fix toggle dark mode

--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -4,10 +4,6 @@
 
   .userWrapper {
     @apply flex items-center gap-3;
-
-    button {
-      @apply text-light-gray;
-    }
   }
 
 }
